<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

<!--     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    <TextView
	        android:id="@+id/lblRouteNumber"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/route_number" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dest_number"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:ems="10" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
    <Button
        android:id="@+id/btnStartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service" />
    </LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
        android:id="@+id/lblServiceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
        
    </LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
    <Button
        android:id="@+id/btnStartCallRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_voice_redirect" />

    <Button
        android:id="@+id/btnStopCallRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_voice_redirect" />
    </LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
        android:id="@+id/lblCallRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    </LinearLayout>
</LinearLayout>
